--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "private": true,
-  "name": "babel-starter-kit",
-  "version": "0.0.0",
+  "name": "fetch-tools",
+  "version": "0.0.1",
   "description": "A project template for authoring and publishing JavaScript libraries",
   "homepage": "https://www.kriasoft.com/babel-starter-kit/",
-  "repository": "kriasoft/babel-starter-kit",
-  "author": "Kriasoft <hello@kriasoft.com> (https://www.kriasoft.com)",
-  "contributors": [
-    "Konstantin Tarkus <hello@tarkus.me>",
-    "Vladimir Kutepov <frenzzy.man@gmail.com>"
-  ],
+  "repository": "Sogrey/fetch-tools",
+  "author": "Sogrey",
+  "contributors": [],
   "license": "MIT",
-  "keywords": [],
+  "keywords": [
+    "Fetch",
+    "XMLHttpRequest",
+    "Babel"
+  ],
   "main": "index.js",
   "jsnext:main": "index.es.js",
   "babel": {
